--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-virtual-scroll-list",
+  "name": "@acbde45/vue-virtual-scroll-list",
   "private": true,
   "version": "0.0.0",
   "scripts": {
