--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@acbde45/vue-virtual-scroll-list",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "module": "src/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "peerDependencies": {
+    "vue": ">=3.2",
+    "sass": ">=1.30",
+    "tiny-emitter": ">=2.0",
+    "@vitejs/plugin-vue": ">=2.0",
+    "vite": ">=2.0"
   },
   "dependencies": {
     "sass": "^1.51.0",
