--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@acbde45/vue-virtual-scroll-list",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "module": "src/index.js",
+  "files": "src",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
