--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@acbde45/vue-virtual-scroll-list",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "module": "src/index.js",
-  "files": "src",
+  "files": ["src"],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
