--- a/package.json
+++ b/package.json
@@ -2,26 +2,29 @@
   "name": "@acbde45/vue-virtual-scroll-list",
   "version": "0.0.3",
   "module": "src/index.js",
-  "files": ["src"],
+  "files": [
+    "src"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "vue": ">=3.2",
+    "@vitejs/plugin-vue": ">=2.0",
     "sass": ">=1.30",
     "tiny-emitter": ">=2.0",
-    "@vitejs/plugin-vue": ">=2.0",
-    "vite": ">=2.0"
+    "vite": ">=2.0",
+    "vue": ">=3.2"
   },
   "dependencies": {
     "sass": "^1.51.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@acbde45/vue-virtual-scroll-list": "^0.0.3",
     "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.9",
-    "tiny-emitter": "^2.1.0"
+    "tiny-emitter": "^2.1.0",
+    "vite": "^2.9.9"
   }
 }
